# containerbox

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main_containexec.yml
src/: dependencies.py  main.py  schemas.py
src/routers/: root.py
