[tool.pdm]

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"

[tool.ruff]
select = [
    "F",
    "E",
    "N",
    "UP",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "C4",
    "DTZ",
    "G",
    "PIE",
    "SIM",
    "PTH",
]

[project]
name = "containexec"
version = "0.1.0"
description = "Use a Docker host to execute requested code in containers"
authors = [
    { name = "PixelSam123", email = "77851256+PixelSam123@users.noreply.github.com" },
]
dependencies = ["fastapi[all]>=0.95.0", "docker>=6.0.1"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
